--- a/blog-darksouls/src/styles/navBar.css
+++ b/blog-darksouls/src/styles/navBar.css
@@ -29,9 +29,22 @@ nav a{
 
 
 .logo img {
-    width: 60px; 
+    width: 50px; 
     height: auto;
   }
-  .logo {
-    padding: 10px;
+
+
+.logo {
+    padding: 5px;
   }
+
+
+.main-title {
+  display: flex;
+  justify-content: left;
+}
+
+a:hover {
+  cursor: pointer;
+  color: red;
+}
