--- a/blog-darksouls/src/styles/navBar.css
+++ b/blog-darksouls/src/styles/navBar.css
@@ -7,9 +7,9 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: black;
     color: white;
     padding: 10px 25px;
+    background-image: linear-gradient(to right, #434343 0%, black 100%);
 }
 
 nav ul {
